Update some dependencies

--- a/build.gradle
+++ b/build.gradle
@@ -2,20 +2,21 @@
 
 buildscript {
     ext {
-        kotlin_version = "1.1.4-3"
-        dokka_version = "0.9.15"
-        anko_version = "0.10.1"
+        kotlin_version = "1.2.70"
+        dokka_version = "0.9.17"
+        anko_version = "0.10.6"
     }
 
     repositories {
         jcenter()
+        google()
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:2.3.3"
+        classpath 'com.android.tools.build:gradle:3.1.4'
         classpath "org.jetbrains.dokka:dokka-android-gradle-plugin:${dokka_version}"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath 'com.github.dcendents:android-maven-gradle-plugin:1.5'
-        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.7.3'
+        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.8.4'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -24,6 +25,7 @@ buildscript {
 allprojects {
     repositories {
         jcenter()
+        google()
     }
 }
 
