--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,8 @@ buildscript {
         kotlin_version = "1.2.71"
         dokka_version = "0.9.17"
         anko_version = "0.10.6"
+        androidx_version = '1.1.0-alpha01'
+        junit_version = '4.12'
     }
 
     repositories {
